--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,8 @@ for (let i=0 ; i < inside_20C.features.length; i++)
 	var lnglat = [inside_20C.features[i].geometry.coordinates[1], inside_20C.features[i].geometry.coordinates[0]];
 	points_turf.push(lnglat);
 	};
-	 
+
+console.log(layer_adresses);
 Layer_IRIS_ZI_20C.eachLayer(function(layer)
 {
 var inside = 
