--- a/index.html
+++ b/index.html
@@ -1127,6 +1127,8 @@ var lnglat = [element._latlng.lng, element._latlng.lat];
 points_turf.push(lnglat);
 }
 )
+
+console.log(points_turf);
 	
 // Layer_IRIS_ZI_20C.eachLayer(function(layer)
 Layer_IRIS.eachLayer(function(layer)
