--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	  
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
+    <script src="./javascripts/IRIS_IDF.json"></script>
 
 </head>
 <body>
