--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@ turf.pointsWithinPolygon(
  turf.flip(turf.polygon(layer.feature.geometry.coordinates))
   );
 // console.log('IRIS' + ' ' + layer.feature.properties.C_IR + ' ' + layer.feature.properties.L_IR + ' : ' + inside.features.length);
-console.log('IRIS' + ' ' + layer.feature.properties.code_iris + ' ' + layer.feature.properties.nom_iris + ' : ' + inside.features.length);
+console.log('IRIS' + ' ' + layer.feature.properties.C_IR + ' ' + layer.feature.properties.L_IR + ' : ' + inside.features.length);
 }
 else
 {
@@ -1153,7 +1153,7 @@ turf.pointsWithinPolygon(
  turf.flip(turf.multiPolygon(layer.feature.geometry.coordinates))
   );
 // console.log('IRIS' + ' ' + layer.feature.properties.C_IR + ' ' + layer.feature.properties.L_IR + ' : ' + inside.features.length);
-console.log('IRIS' + ' ' + layer.feature.properties.code_iris + ' ' + layer.feature.properties.nom_iris + ' : ' + inside.features.length);
+console.log('IRIS' + ' ' + layer.feature.properties.C_IR + ' ' + layer.feature.properties.L_IR + ' : ' + inside.features.length);
 }
 
 	
