--- a/index.html
+++ b/index.html
@@ -1053,8 +1053,12 @@ for (k=0 ; k < poly.geometry.coordinates.length ; k++)
 	}
 }
 
-console.log(layer._tooltip._content);
 var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'black',  opacity : 0.8, fill : true, fillColor : 'black', fillOpacity : 1.0}});
+
+// on calcule le nombre d'adresses contenu dans chaque cercle_mange
+console.log(layer._tooltip._content);
+console.log(cercle_mange);
+
 cercle_mange.addTo(layer_cercles_CS) ;
 // fin de la boucle sur chaque layer
 });
