--- a/index.html
+++ b/index.html
@@ -1058,6 +1058,18 @@ var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'bl
 // on calcule le nombre d'adresses contenu dans chaque cercle_mange
 console.log(layer._tooltip._content);
 console.log(cercle_mange);
+for (let i=0 ; i < cercle_mange._latlngs.length; i++)
+{
+// construction du vecteur d'adresses
+layer_adresses.eachLayer(function(element)
+{
+var latlng = [element._latlng.lat, element._latlng.lng];
+points_turf.push(latlng);
+}
+)
+// recherche des adresses dans cercle_mange
+
+}
 
 cercle_mange.addTo(layer_cercles_CS) ;
 // fin de la boucle sur chaque layer
