--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@ var latlng = [element._latlng.lat, element._latlng.lng];
 points_turf.push(latlng);
 }
 )
-console.log(points.turf);
+console.log(points_turf);
 // recherche des adresses dans cercle_mange
 var inside = 
 turf.pointsWithinPolygon(
