--- a/index.html
+++ b/index.html
@@ -1070,6 +1070,7 @@ points_turf.push(latlng);
 )
 console.log(points_turf);
 // recherche des adresses dans cercle_mange
+console.log(cercle_mange._latlngs[i]);
 var inside = 
 turf.pointsWithinPolygon(
  turf.points(points_turf), 
