--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,7 @@ points_turf.push(latlng);
 console.log(points_turf);
 // recherche des adresses dans cercle_mange
 console.log(cercle_mange._latlngs[i]);
+console.log(turf.polygon(cercle_mange));
 var inside = 
 turf.pointsWithinPolygon(
  turf.points(points_turf), 
