--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@ var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'bl
 
 // on calcule le nombre d'adresses contenu dans chaque cercle_mange
 console.log(layer._tooltip._content);
-console.log(cercle_mange._latlngs.length);
+console.log(cercle_mange);
 
 {
 // construction du vecteur d'adresses
