--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,10 @@ var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'bl
 console.log(layer._tooltip._content);
 for (i=0 ; i < cercle_mange._latlngs.length ; i++)
 {
+if (cercle_mange._latlngs.length == 1)
+{
 console.log(cercle_mange._latlngs[i].length);
+}
 }
 	
 {
