--- a/index.html
+++ b/index.html
@@ -1064,8 +1064,7 @@ for (i=0 ; i < cercle_mange._latlngs.length ; i++)
 {
 if (cercle_mange._latlngs.length == 1)
 {
-console.log(cercle_mange._latlngs[i].length);
-console.log(layer);
+console.log(cercle_mange.toGeoJSON());
 }
 }
 	
