--- a/index.html
+++ b/index.html
@@ -1060,13 +1060,8 @@ var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'bl
 
 // on calcule le nombre d'adresses contenu dans chaque cercle_mange
 console.log(layer._tooltip._content);
-for (i=0 ; i < cercle_mange._latlngs.length ; i++)
-{
-if (cercle_mange._latlngs.length == 1)
-{
 console.log(cercle_mange.toGeoJSON());
-}
-}
+
 	
 {
 // construction du vecteur d'adresses
@@ -1077,15 +1072,13 @@ var latlng = [element._latlng.lat, element._latlng.lng];
 points_turf.push(latlng);
 }
 )
-console.log(points_turf);
 // recherche des adresses dans cercle_mange
-console.log(cercle_mange._latlngs[i]);
-console.log(turf.polygon(cercle_mange));
+console.log(cercle_mange.toGeoJSON());
 /*
 var inside = 
 turf.pointsWithinPolygon(
  turf.points(points_turf), 
- turf.polygon(cercle_mange)
+ cercle_mange.toGeoJSON()
   );
 var nb_points ;
 nb_points += inside.length;
