--- a/index.html
+++ b/index.html
@@ -1073,6 +1073,7 @@ points_turf.push(latlng);
 }
 )
 // recherche des adresses dans cercle_mange
+console.log(points_turf);
 console.log(cercle_mange.toGeoJSON());
 
 var inside = 
