--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@ console.log(points_turf);
 var inside = 
 turf.pointsWithinPolygon(
  turf.points(points_turf), 
- turf.flip(turf.polygon(cercle_mange.feature.geometry.coordinates)).toGeoJSON()
+ turf.flip(turf.polygon(cercle_mange.toGeoJSON().feature.geometry.coordinates)).toGeoJSON()
   );
 var nb_points ;
 nb_points += inside.length;
