--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@ points_turf.push(latlng);
 )
 // recherche des adresses dans cercle_mange
 console.log(points_turf);
-// console.log(turf.flip(cercle_mange).toGeoJSON());
+console.log(cercle_mange.toGeoJSON().feature);
 
 var inside = 
 turf.pointsWithinPolygon(
