--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@ console.log(cercle_mange.toGeoJSON().geometry.coordinates[0]);
 var inside = 
 turf.pointsWithinPolygon(
  turf.points(points_turf), 
- turf.flip(cercle_mange.toGeoJSON().geometry.coordinates[0])
+ turf.flip(turf.polygon(cercle_mange.toGeoJSON().geometry.coordinates[0]))
   );
 var nb_points ;
 nb_points += inside.length;
