--- a/index.html
+++ b/index.html
@@ -1081,6 +1081,7 @@ turf.pointsWithinPolygon(
  turf.points(points_turf), 
  turf.flip(turf.polygon(cercle_mange.toGeoJSON().geometry.coordinates))
   );
+console.log(inside);
 var nb_points ;
 nb_points += inside.length;
 console.log(nb_points);
