--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@ turf.pointsWithinPolygon(
   );
 console.log(inside);
 var nb_points ;
-nb_points += inside.length;
+nb_points += inside.features.length;
 console.log(nb_points);
 }
 
