--- a/index.html
+++ b/index.html
@@ -1082,9 +1082,7 @@ turf.pointsWithinPolygon(
  turf.flip(turf.polygon(cercle_mange.toGeoJSON().geometry.coordinates))
   );
 console.log(inside);
-var nb_points ;
-nb_points += inside.features.length;
-console.log(nb_points);
+console.log(inside.features.length);
 }
 
 
