--- a/index.html
+++ b/index.html
@@ -1360,6 +1360,9 @@ series.dataFields.valueY = "visits";
 series.columns.template.tooltipText = "{valueY.value}";
 series.columns.template.tooltipY = 0;
 series.columns.template.strokeOpacity = 0;
+series.labels.template.fontSize = 11;
+series.labels.template.maxWidth = 60;
+series.labels.template.wrap = true;
 
 chart.seriesContainer.zIndex = -1;
 
