--- a/index.html
+++ b/index.html
@@ -1284,6 +1284,8 @@ chart.innerRadius = am4core.percent(50);
 chart.startAngle = -80;
 chart.endAngle = 260;
 
+chart.fontSize = 11;
+
 chart.data = [
   {
     country: "USA",
@@ -1360,9 +1362,6 @@ series.dataFields.valueY = "visits";
 series.columns.template.tooltipText = "{valueY.value}";
 series.columns.template.tooltipY = 0;
 series.columns.template.strokeOpacity = 0;
-series.labels.template.fontSize = 11;
-series.labels.template.maxWidth = 60;
-series.labels.template.wrap = true;
 
 chart.seriesContainer.zIndex = -1;
 
