--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ container_2.fillOpacity = 0.95;
 <div id="chartdiv" style="height:200px"></div>
 
 <ul>
-<li>nombre d'adresses dans chaque cercle d'influence des autres centres sociaux parisiens</li>
+<li>nombre d'adresses dans chaque cercle d'influence des autres centres sociaux parisiens (survoler les secteurs pour visualiser le nombre)</li>
 </ul>
 		
 <div id="chartdiv_2" style="height:600px"></div>
