--- a/index.html
+++ b/index.html
@@ -1288,58 +1288,58 @@ chart.fontSize = 11;
 
 chart.data = [
   {
-    country: "USA",
-    visits: 2000
+    nom_cs: "USA",
+    nb_adresses: 2000
   },
   {
-    country: "China",
-    visits: 1882
+    nom_cs: "China",
+    nb_adresses: 1882
   },
   {
-    country: "Japan",
-    visits: 1809
+    nom_cs: "Japan",
+    nb_adresses: 1809
   },
   {
-    country: "Germany",
-    visits: 1322
+    nom_cs: "Germany",
+    nb_adresses: 1322
   },
   {
-    country: "UK",
-    visits: 1122
+    nom_cs: "UK",
+    nb_adresses: 1122
   },
   {
-    country: "France",
-    visits: 1114
+    nom_cs: "France",
+    nb_adresses: 1114
   },
   {
-    country: "India",
-    visits: 984
+    nom_cs: "India",
+    nb_adresses: 984
   },
   {
-    country: "Spain",
-    visits: 711
+    nom_cs: "Spain",
+    nb_adresses: 711
   },
   {
-    country: "Netherlands",
-    visits: 665
+    nom_cs: "Netherlands",
+    nb_adresses: 665
   },
   {
-    country: "Russia",
-    visits: 580
+    nom_cs: "Russia",
+    nb_adresses: 580
   },
   {
-    country: "South Korea",
-    visits: 443
+    nom_cs: "South Korea",
+    nb_adresses: 443
   },
   {
-    country: "Canada",
-    visits: 441
+    nom_cs: "Canada",
+    nb_adresses: 441
   }
 ];
 
 var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
 categoryAxis.renderer.grid.template.location = 0;
-categoryAxis.dataFields.category = "country";
+categoryAxis.dataFields.category = "nom_cs";
 categoryAxis.renderer.labels.template.location = 0.5;
 categoryAxis.renderer.grid.template.strokeOpacity = 0.08;
 categoryAxis.renderer.tooltipLocation = 0.5;
@@ -1357,8 +1357,8 @@ valueAxis.renderer.grid.template.strokeOpacity = 0.08;
 valueAxis.tooltip.disabled = true;
 
 var series = chart.series.push(new am4charts.RadarColumnSeries());
-series.dataFields.categoryX = "country";
-series.dataFields.valueY = "visits";
+series.dataFields.categoryX = "nom_cs";
+series.dataFields.valueY = "nb_adresses";
 series.columns.template.tooltipText = "{valueY.value}";
 series.columns.template.tooltipY = 0;
 series.columns.template.strokeOpacity = 0;
