--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,10 @@ turf.pointsWithinPolygon(
 console.log(layer._tooltip._content);
 console.log(inside.features.length);
 	// on ajoute les données du graphique
-
+	donnees_graphe_CS.push({
+		nom_cs: layer._tooltip._content,
+		nb_adresses:inside.features.length
+	});
 }
 
 var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'black',  opacity : 0.8, fill : true, fillColor : 'black', fillOpacity : 1.0}});
@@ -1294,56 +1297,7 @@ chart.endAngle = 260;
 
 chart.fontSize = 11;
 
-chart.data = [
-  {
-    nom_cs: "USA",
-    nb_adresses: 2000
-  },
-  {
-    nom_cs: "China",
-    nb_adresses: 1882
-  },
-  {
-    nom_cs: "Japan",
-    nb_adresses: 1809
-  },
-  {
-    nom_cs: "Germany",
-    nb_adresses: 1322
-  },
-  {
-    nom_cs: "UK",
-    nb_adresses: 1122
-  },
-  {
-    nom_cs: "France",
-    nb_adresses: 1114
-  },
-  {
-    nom_cs: "India",
-    nb_adresses: 984
-  },
-  {
-    nom_cs: "Spain",
-    nb_adresses: 711
-  },
-  {
-    nom_cs: "Netherlands",
-    nb_adresses: 665
-  },
-  {
-    nom_cs: "Russia",
-    nb_adresses: 580
-  },
-  {
-    nom_cs: "South Korea",
-    nb_adresses: 443
-  },
-  {
-    nom_cs: "Canada",
-    nb_adresses: 441
-  }
-];
+chart.data = donnees_graphe_CS;
 
 var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
 categoryAxis.renderer.grid.template.location = 0;
