--- a/index.html
+++ b/index.html
@@ -1063,11 +1063,14 @@ turf.pointsWithinPolygon(
   );
 console.log(layer._tooltip._content);
 console.log(inside.features.length);
-	// on ajoute les données du graphique
+	// on ajoute les données du graphique en remplissant un vecteur pour chacun
+	if (donnees_graphe_CS.length <= 14)
+	{
 	donnees_graphe_CS.push({
 		nom_cs: layer._tooltip._content,
 		nb_adresses:inside.features.length
 	});
+	}
 }
 else
 { // cas d'un multipolygone : on doit aller opérer sur chacun des polygones, éventuellement à trous, chaque élément du tableau de coordonnées est un polygone
@@ -1098,11 +1101,14 @@ turf.pointsWithinPolygon(
   );
 console.log(layer._tooltip._content);
 console.log(inside.features.length);
-	// on ajoute les données du graphique
+	// on ajoute les données du graphique en remplissant un vecteur pour chacun
+	if (donnees_graphe_CS.length <= 14)
+	{
 	donnees_graphe_CS.push({
 		nom_cs: layer._tooltip._content,
 		nb_adresses:inside.features.length
 	});
+	}
 }
 
 var cercle_mange = new L.Polygon(lng_lat_poly, {style: {weight: 5.0, color : 'black',  opacity : 0.8, fill : true, fillColor : 'black', fillOpacity : 1.0}});
