--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,7 @@ chart.exporting.menu.verticalAlign = "top";
 }); // end am4core.ready()
 
 
-// génération du graphique de synthèse adresses par cercle influence CS
+// génération du 1er graphique de synthèse adresses par cercle influence CS
 am4core.ready(function() {
 
 // Themes begin
@@ -1327,6 +1327,66 @@ chart.endAngle = 260;
 chart.fontSize = 11;
 
 chart.data = donnees_graphe_CS;
+
+var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
+categoryAxis.renderer.grid.template.location = 0;
+categoryAxis.dataFields.category = "nom_cs";
+categoryAxis.renderer.labels.template.location = 0.5;
+categoryAxis.renderer.grid.template.strokeOpacity = 0.08;
+categoryAxis.renderer.tooltipLocation = 0.5;
+categoryAxis.tooltip.disabled = true;
+categoryAxis.renderer.labels.template.bent = true;
+categoryAxis.renderer.labels.template.padding(0,0,0,0);
+categoryAxis.renderer.labels.template.radius = 7;
+
+var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
+valueAxis.min = 0;
+valueAxis.max = max_graphe_CS;
+valueAxis.strictMinMax = true;
+valueAxis.renderer.minGridDistance = 30;
+valueAxis.renderer.grid.template.strokeOpacity = 0.08;
+valueAxis.tooltip.disabled = true;
+
+var series = chart.series.push(new am4charts.RadarColumnSeries());
+series.dataFields.categoryX = "nom_cs";
+series.dataFields.valueY = "nb_adresses";
+series.columns.template.tooltipText = "{valueY.value}";
+series.columns.template.tooltipY = 0;
+series.columns.template.strokeOpacity = 0;
+
+chart.seriesContainer.zIndex = -1;
+
+// as by default columns of the same series are of the same color, we add adapter which takes colors from chart.colors color set
+series.columns.template.adapter.add("fill", function(fill, target) {
+  return chart.colors.getIndex(target.dataItem.index);
+});
+
+let cursor = new am4charts.RadarCursor();
+cursor.innerRadius = am4core.percent(50);
+cursor.lineY.disabled = true;
+
+cursor.xAxis = categoryAxis;
+chart.cursor = cursor;
+
+}); // end am4core.ready()
+	 
+
+// génération du 1er graphique de synthèse adresses par cercle influence CS
+am4core.ready(function() {
+
+// Themes begin
+am4core.useTheme(am4themes_animated);
+// Themes end
+var chart = container_2.createChild(am4charts.RadarChart);
+
+chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
+chart.innerRadius = am4core.percent(50);
+chart.startAngle = -80;
+chart.endAngle = 260;
+
+chart.fontSize = 11;
+
+chart.data = donnees_graphe_2_CS;
 
 var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
 categoryAxis.renderer.grid.template.location = 0;
