--- a/index.html
+++ b/index.html
@@ -1368,6 +1368,12 @@ cursor.lineY.disabled = true;
 cursor.xAxis = categoryAxis;
 chart.cursor = cursor;
 
+chart.background.fill = new am4core.color('#C0C0C0');
+chart.background.opacity = 0.5;
+chart.exporting.menu = new am4core.ExportMenu();
+chart.exporting.menu.align = "left";
+chart.exporting.menu.verticalAlign = "top";
+
 }); // end am4core.ready()
 	 
 
@@ -1427,6 +1433,12 @@ cursor.lineY.disabled = true;
 
 cursor.xAxis = categoryAxis;
 chart.cursor = cursor;
+	
+chart.background.fill = new am4core.color('#C0C0C0');
+chart.background.opacity = 0.5;
+chart.exporting.menu = new am4core.ExportMenu();
+chart.exporting.menu.align = "left";
+chart.exporting.menu.verticalAlign = "top";
 
 }); // end am4core.ready()
 
