--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@ chart.data = [
   {
     zone: "entre 5 et 10 min",
     value: PS[1].length,
-    labelColor: new am4core.color('green').lighten(0.3)
+    labelColor: new am4core.color(rgb(160, 220, 103))
   },
   {
     zone: "entre 10 et 15 min",
@@ -883,7 +883,7 @@ series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
 series.colors.list = [
     new am4core.color('blue').lighten(0.3),
-    new am4core.color('green').lighten(0.3),
+    new am4core.color(rgb(160, 220, 103)),
     new am4core.color('#f4c430').lighten(0.3),
     new am4core.color('orange').lighten(0.3),
     new am4core.color('red').lighten(0.3)
