--- a/index.html
+++ b/index.html
@@ -1357,7 +1357,15 @@ chart.seriesContainer.zIndex = -1;
 
 // as by default columns of the same series are of the same color, we add adapter which takes colors from chart.colors color set
 series.columns.template.adapter.add("fill", function(fill, target) {
+/*
   return chart.colors.getIndex(target.dataItem.index);
+*/
+ if (target.dataItem && (target.dataItem.valueY / max_graphe_CS <= 0.25)) {
+    return am4core.color("blue");
+  }
+  else {
+    return fill;
+  }
 });
 
 let cursor = new am4charts.RadarCursor();
