--- a/index.html
+++ b/index.html
@@ -1366,6 +1366,14 @@ series.columns.template.adapter.add("fill", function(fill, target) {
   else if (target.dataItem && (target.dataItem.valueY / max_graphe_CS > 0.25) && (target.dataItem.valueY / max_graphe_CS <= 0.50)) {
     return am4core.color("powderblue");
   }
+  else if (target.dataItem && (target.dataItem.valueY / max_graphe_CS > 0.50) && (target.dataItem.valueY / max_graphe_CS <= 0.75)) {
+    return am4core.color("indianred");
+  }
+  else if (target.dataItem && (target.dataItem.valueY / max_graphe_CS > 0.75) && (target.dataItem.valueY / max_graphe_CS <= 1.00)) {
+    return am4core.color("red");
+  }
+
+
 });
 
 let cursor = new am4charts.RadarCursor();
@@ -1429,7 +1437,21 @@ chart.seriesContainer.zIndex = -1;
 
 // as by default columns of the same series are of the same color, we add adapter which takes colors from chart.colors color set
 series.columns.template.adapter.add("fill", function(fill, target) {
+/*
   return chart.colors.getIndex(target.dataItem.index);
+*/
+ if (target.dataItem && (target.dataItem.valueY / max_graphe_CS <= 0.25)) {
+    return am4core.color("blue");
+  }
+  else if (target.dataItem && (target.dataItem.valueY / max_graphe_CS > 0.25) && (target.dataItem.valueY / max_graphe_CS <= 0.50)) {
+    return am4core.color("powderblue");
+  }
+  else if (target.dataItem && (target.dataItem.valueY / max_graphe_CS > 0.50) && (target.dataItem.valueY / max_graphe_CS <= 0.75)) {
+    return am4core.color("indianred");
+  }
+  else if (target.dataItem && (target.dataItem.valueY / max_graphe_CS > 0.75) && (target.dataItem.valueY / max_graphe_CS <= 1.00)) {
+    return am4core.color("red");
+  }
 });
 
 let cursor = new am4charts.RadarCursor();
