--- a/index.html
+++ b/index.html
@@ -1292,8 +1292,14 @@ series.alignLabels = false;
 series.hiddenState.properties.startAngle = 90;
 series.hiddenState.properties.endAngle = 90;
 series.labels.template.fontSize = 10;
+/*
 series.labels.template.maxWidth = 60;
 series.labels.template.wrap = true;
+*/
+series.labels.template.bent = true;
+series.renderer.labels.template.padding(0,0,0,0);
+series.renderer.labels.template.radius = 15;
+
 series.colors.list = [
     new am4core.color('blue').lighten(0.3),
     new am4core.color('purple').lighten(0.3),
